[gd_scene load_steps=2 format=3 uid="uid://g0wap7e024se"]

[ext_resource type="Script" path="res://interfaces/hud/hud.gd" id="1_rno08"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rno08")

[node name="Crosshair" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -1.0
offset_right = 20.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.113725, 0.678431, 0.305882, 1)

[node name="TextureRect2" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -20.0
offset_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.113725, 0.678431, 0.305882, 1)

[node name="FpsLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 36.0
offset_bottom = 34.0
theme_override_font_sizes/font_size = 32
text = "FPS: 60"

[node name="PlayerStateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Idle"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WeaponStateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_right = -16.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Idle"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HeatLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -35.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "0"

[node name="AmmoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -70.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 48
text = "30"
